# backend/app/infrastructure/persistence/social_v2/models.py
@@ -88,6 +88,8 @@ content_rows = Table(
     Column("average_time_watched", Float, nullable=True),
     Column("interactions_count", Float, nullable=True),
     Column("replies_count", Float, nullable=True),
+    Column("saves_count", Float, nullable=True),
+    Column("sticker_taps", Float, nullable=True),
     Column("profile_visits", Float, nullable=True),
     Column("follows_count", Float, nullable=True),
     Column("taps_forward", Float, nullable=True),
